parser/named_parser.go
// Code generated from c:\dev\repo\go\kra\parser\Named.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // Named

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Copyright 2021 taichi
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type NamedParser struct {
	*antlr.BaseParser
}

var namedParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func namedParserInit() {
	staticData := &namedParserStaticData
	staticData.literalNames = []string{
		"", "", "", "", "", "", "", "", "", "'('", "')'", "'?'", "','", "'@'",
		"':'", "';'", "'.'", "'*'",
	}
	staticData.symbolicNames = []string{
		"", "SPACES", "BLOCK_COMMENT", "LINE_COMMENT", "IN", "STRING", "NUMBER",
		"IDENTIFIER", "DECPARAM", "OPEN_PAREN", "CLOSE_PAREN", "QMARK", "COMMA",
		"AT", "COLON", "SEMI", "DOT", "STAR", "ANY_SYMBOL",
	}
	staticData.ruleNames = []string{
		"parse", "stmt", "inExpr", "parameter", "namedParamter", "qmarkParameter",
		"decParameter", "staticParameter", "anyStmtParts",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// NamedParserInit initializes any static state used to implement NamedParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewNamedParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NamedParserInit() {
	staticData := &namedParserStaticData
	staticData.once.Do(namedParserInit)
}

// NewNamedParser produces a new parser instance for the optional input antlr.TokenStream.
func NewNamedParser(input antlr.TokenStream) *NamedParser {
	NamedParserInit()
	this := new(NamedParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &namedParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Named.g4"

	return this
}

// NamedParser tokens.
const (
	NamedParserEOF           = antlr.TokenEOF
	NamedParserSPACES        = 1
	NamedParserBLOCK_COMMENT = 2
	NamedParserLINE_COMMENT  = 3
	NamedParserIN            = 4
	NamedParserSTRING        = 5
	NamedParserNUMBER        = 6
	NamedParserIDENTIFIER    = 7
	NamedParserDECPARAM      = 8
	NamedParserOPEN_PAREN    = 9
	NamedParserCLOSE_PAREN   = 10
	NamedParserQMARK         = 11
	NamedParserCOMMA         = 12
	NamedParserAT            = 13
	NamedParserCOLON         = 14
	NamedParserSEMI          = 15
	NamedParserDOT           = 16
	NamedParserSTAR          = 17
	NamedParserANY_SYMBOL    = 18
)

// NamedParser rules.
const (
	NamedParserRULE_parse           = 0
	NamedParserRULE_stmt            = 1
	NamedParserRULE_inExpr          = 2
	NamedParserRULE_parameter       = 3
	NamedParserRULE_namedParamter   = 4
	NamedParserRULE_qmarkParameter  = 5
	NamedParserRULE_decParameter    = 6
	NamedParserRULE_staticParameter = 7
	NamedParserRULE_anyStmtParts    = 8
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NamedParserRULE_parse
	return p
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NamedParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *ParseContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *ParseContext) AllSEMI() []antlr.TerminalNode {
	return s.GetTokens(NamedParserSEMI)
}

func (s *ParseContext) SEMI(i int) antlr.TerminalNode {
	return s.GetToken(NamedParserSEMI, i)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NamedVisitor:
		return t.VisitParse(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NamedParser) Parse() (localctx IParseContext) {
	this := p
	_ = this

	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NamedParserRULE_parse)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Stmt()
	}
	p.SetState(27)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(20)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for ok := true; ok; ok = _la == NamedParserSEMI {
				{
					p.SetState(19)
					p.Match(NamedParserSEMI)
				}

				p.SetState(22)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(24)
				p.Stmt()
			}

		}
		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == NamedParserSEMI {
		{
			p.SetState(30)
			p.Match(NamedParserSEMI)
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NamedParserRULE_stmt
	return p
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NamedParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) AllInExpr() []IInExprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInExprContext); ok {
			len++
		}
	}

	tst := make([]IInExprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInExprContext); ok {
			tst[i] = t.(IInExprContext)
			i++
		}
	}

	return tst
}

func (s *StmtContext) InExpr(i int) IInExprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInExprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInExprContext)
}

func (s *StmtContext) AllAnyStmtParts() []IAnyStmtPartsContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAnyStmtPartsContext); ok {
			len++
		}
	}

	tst := make([]IAnyStmtPartsContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAnyStmtPartsContext); ok {
			tst[i] = t.(IAnyStmtPartsContext)
			i++
		}
	}

	return tst
}

func (s *StmtContext) AnyStmtParts(i int) IAnyStmtPartsContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAnyStmtPartsContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAnyStmtPartsContext)
}

func (s *StmtContext) AllParameter() []IParameterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParameterContext); ok {
			len++
		}
	}

	tst := make([]IParameterContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IParameterContext); ok {
			tst[i] = t.(IParameterContext)
			i++
		}
	}

	return tst
}

func (s *StmtContext) Parameter(i int) IParameterContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParameterContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParameterContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NamedVisitor:
		return t.VisitStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NamedParser) Stmt() (localctx IStmtContext) {
	this := p
	_ = this

	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NamedParserRULE_stmt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NamedParserIN)|(1<<NamedParserSTRING)|(1<<NamedParserNUMBER)|(1<<NamedParserIDENTIFIER)|(1<<NamedParserDECPARAM)|(1<<NamedParserOPEN_PAREN)|(1<<NamedParserCLOSE_PAREN)|(1<<NamedParserQMARK)|(1<<NamedParserCOMMA)|(1<<NamedParserAT)|(1<<NamedParserCOLON)|(1<<NamedParserSTAR)|(1<<NamedParserANY_SYMBOL))) != 0) {
		p.SetState(39)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case NamedParserIN:
			{
				p.SetState(36)
				p.InExpr()
			}

		case NamedParserNUMBER, NamedParserIDENTIFIER, NamedParserOPEN_PAREN, NamedParserCLOSE_PAREN, NamedParserCOMMA, NamedParserSTAR, NamedParserANY_SYMBOL:
			{
				p.SetState(37)
				p.AnyStmtParts()
			}

		case NamedParserSTRING, NamedParserDECPARAM, NamedParserQMARK, NamedParserAT, NamedParserCOLON:
			{
				p.SetState(38)
				p.Parameter()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IInExprContext is an interface to support dynamic dispatch.
type IInExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInExprContext differentiates from other interfaces.
	IsInExprContext()
}

type InExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInExprContext() *InExprContext {
	var p = new(InExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NamedParserRULE_inExpr
	return p
}

func (*InExprContext) IsInExprContext() {}

func NewInExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InExprContext {
	var p = new(InExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NamedParserRULE_inExpr

	return p
}

func (s *InExprContext) GetParser() antlr.Parser { return s.parser }

func (s *InExprContext) IN() antlr.TerminalNode {
	return s.GetToken(NamedParserIN, 0)
}

func (s *InExprContext) OPEN_PAREN() antlr.TerminalNode {
	return s.GetToken(NamedParserOPEN_PAREN, 0)
}

func (s *InExprContext) AllParameter() []IParameterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParameterContext); ok {
			len++
		}
	}

	tst := make([]IParameterContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IParameterContext); ok {
			tst[i] = t.(IParameterContext)
			i++
		}
	}

	return tst
}

func (s *InExprContext) Parameter(i int) IParameterContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParameterContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParameterContext)
}

func (s *InExprContext) CLOSE_PAREN() antlr.TerminalNode {
	return s.GetToken(NamedParserCLOSE_PAREN, 0)
}

func (s *InExprContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(NamedParserCOMMA)
}

func (s *InExprContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(NamedParserCOMMA, i)
}

func (s *InExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NamedVisitor:
		return t.VisitInExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NamedParser) InExpr() (localctx IInExprContext) {
	this := p
	_ = this

	localctx = NewInExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NamedParserRULE_inExpr)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(NamedParserIN)
	}
	{
		p.SetState(44)
		p.Match(NamedParserOPEN_PAREN)
	}
	{
		p.SetState(45)
		p.Parameter()
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == NamedParserCOMMA {
		{
			p.SetState(46)
			p.Match(NamedParserCOMMA)
		}
		{
			p.SetState(47)
			p.Parameter()
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(53)
		p.Match(NamedParserCLOSE_PAREN)
	}

	return localctx
}

// IParameterContext is an interface to support dynamic dispatch.
type IParameterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParameterContext differentiates from other interfaces.
	IsParameterContext()
}

type ParameterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParameterContext() *ParameterContext {
	var p = new(ParameterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NamedParserRULE_parameter
	return p
}

func (*ParameterContext) IsParameterContext() {}

func NewParameterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParameterContext {
	var p = new(ParameterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NamedParserRULE_parameter

	return p
}

func (s *ParameterContext) GetParser() antlr.Parser { return s.parser }

func (s *ParameterContext) NamedParamter() INamedParamterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamedParamterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamedParamterContext)
}

func (s *ParameterContext) QmarkParameter() IQmarkParameterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQmarkParameterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQmarkParameterContext)
}

func (s *ParameterContext) DecParameter() IDecParameterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDecParameterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDecParameterContext)
}

func (s *ParameterContext) StaticParameter() IStaticParameterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStaticParameterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStaticParameterContext)
}

func (s *ParameterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParameterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParameterContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NamedVisitor:
		return t.VisitParameter(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NamedParser) Parameter() (localctx IParameterContext) {
	this := p
	_ = this

	localctx = NewParameterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, NamedParserRULE_parameter)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(59)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case NamedParserAT, NamedParserCOLON:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(55)
			p.NamedParamter()
		}

	case NamedParserQMARK:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(56)
			p.QmarkParameter()
		}

	case NamedParserDECPARAM:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(57)
			p.DecParameter()
		}

	case NamedParserSTRING:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(58)
			p.StaticParameter()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// INamedParamterContext is an interface to support dynamic dispatch.
type INamedParamterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamedParamterContext differentiates from other interfaces.
	IsNamedParamterContext()
}

type NamedParamterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamedParamterContext() *NamedParamterContext {
	var p = new(NamedParamterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NamedParserRULE_namedParamter
	return p
}

func (*NamedParamterContext) IsNamedParamterContext() {}

func NewNamedParamterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamedParamterContext {
	var p = new(NamedParamterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NamedParserRULE_namedParamter

	return p
}

func (s *NamedParamterContext) GetParser() antlr.Parser { return s.parser }

func (s *NamedParamterContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(NamedParserIDENTIFIER)
}

func (s *NamedParamterContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(NamedParserIDENTIFIER, i)
}

func (s *NamedParamterContext) AT() antlr.TerminalNode {
	return s.GetToken(NamedParserAT, 0)
}

func (s *NamedParamterContext) COLON() antlr.TerminalNode {
	return s.GetToken(NamedParserCOLON, 0)
}

func (s *NamedParamterContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(NamedParserDOT)
}

func (s *NamedParamterContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(NamedParserDOT, i)
}

func (s *NamedParamterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamedParamterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamedParamterContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NamedVisitor:
		return t.VisitNamedParamter(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NamedParser) NamedParamter() (localctx INamedParamterContext) {
	this := p
	_ = this

	localctx = NewNamedParamterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, NamedParserRULE_namedParamter)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		_la = p.GetTokenStream().LA(1)

		if !(_la == NamedParserAT || _la == NamedParserCOLON) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(62)
		p.Match(NamedParserIDENTIFIER)
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == NamedParserDOT {
		{
			p.SetState(63)
			p.Match(NamedParserDOT)
		}
		{
			p.SetState(64)
			p.Match(NamedParserIDENTIFIER)
		}

		p.SetState(69)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IQmarkParameterContext is an interface to support dynamic dispatch.
type IQmarkParameterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQmarkParameterContext differentiates from other interfaces.
	IsQmarkParameterContext()
}

type QmarkParameterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQmarkParameterContext() *QmarkParameterContext {
	var p = new(QmarkParameterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NamedParserRULE_qmarkParameter
	return p
}

func (*QmarkParameterContext) IsQmarkParameterContext() {}

func NewQmarkParameterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QmarkParameterContext {
	var p = new(QmarkParameterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NamedParserRULE_qmarkParameter

	return p
}

func (s *QmarkParameterContext) GetParser() antlr.Parser { return s.parser }

func (s *QmarkParameterContext) QMARK() antlr.TerminalNode {
	return s.GetToken(NamedParserQMARK, 0)
}

func (s *QmarkParameterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QmarkParameterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QmarkParameterContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NamedVisitor:
		return t.VisitQmarkParameter(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NamedParser) QmarkParameter() (localctx IQmarkParameterContext) {
	this := p
	_ = this
